--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v2
       - name: Build the Docker image
-        run: docker build . --file Dockerfile.x86_64-unknown-linux-musl --tag docker-cross-rust:x86_64-unknown-linux-musl
+        run: docker build . --file dockerfiles/Dockerfile.x86_64-unknown-linux-musl --tag docker-cross-rust:x86_64-unknown-linux-musl
       - name: Push the Docker image
         run: docker push --tag
       - name: Docker logout
