--- a/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
@@ -83,7 +83,7 @@ RUN export CC=$TARGET_CC && \
     cd .. && rm -rf zlib-$VERS.tar.gz zlib-$VERS checksums.txt && \
     echo "Building OpenSSL" && \
     VERS=1.1.1d && \
-    curl -sДO https://www.openssl.org/source/openssl-$VERS.tar.gz && \
+    curl -sLO https://www.openssl.org/source/openssl-$VERS.tar.gz && \
     tar xzf openssl-$VERS.tar.gz && cd openssl-$VERS && \
     ./Configure $OPENSSL_ARCH no-async no-afalgeng no-shared no-zlib --static -fPIC --prefix=/usr/local/$TARGET && \
     make depend && \
