--- a/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
@@ -50,12 +50,12 @@ ENV CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER=$TARGET-gcc \
     LDFLAGS_x86_64_unknown_linux_gnu=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
     LDFLAGS_x86_64_unknown_linux_musl=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
     LDFLAGS=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
-    CFLAGS_x86_64_unknown_linux_gnu=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CXXFLAGS_x86_64_unknown_linux_gnu=" -fPIC -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CFLAGS_x86_64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CXXFLAGS_x86_64_unknown_linux_musl=" -fPIC -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CXXFLAGS=" -fPIC -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CFLAGS_x86_64_unknown_linux_gnu=" -fPIC -pie -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CXXFLAGS_x86_64_unknown_linux_gnu=" -fPIC -pie -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CFLAGS_x86_64_unknown_linux_musl=" -fPIC -pie -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CXXFLAGS_x86_64_unknown_linux_musl=" -fPIC -pie -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CFLAGS=" -fPIC -pie -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CXXFLAGS=" -fPIC -pie -I/usr/local/include -I/usr/local/$TARGET/include" \
     LIBZ_SYS_STATIC=1 \
     LD_LIBRARY_PATH=/usr/local/lib:/usr/local/$TARGET/lib:$LD_LIBRARY_PATH \
     PKG_CONFIG_ALLOW_CROSS=1 \
