--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,17 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Docker login
-        uses: azure/docker-login@v1
-        with:
-          login-server: contoso.azurecr.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
       - name: Checkout sources
         uses: actions/checkout@v2
       - name: Build the Docker image
         run: docker build . --file dockerfiles/Dockerfile.x86_64-unknown-linux-musl --tag generalbeck/docker-cross-rust:x86_64-unknown-linux-musl
       - name: Push the Docker image
-        run: docker push generalbeck/docker-cross-rust:x86_64-unknown-linux-musl
+        run: |
+          docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
+          docker push generalbeck/docker-cross-rust:x86_64-unknown-linux-musl
       - name: Docker logout
         run: docker logout
