--- a/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
@@ -19,7 +19,7 @@ RUN set -eux; \
     #sed -i 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch=amd64,i386] http:\/\/\1.archive.ubuntu.com\/ubuntu\//g' /etc/apt/sources.list \
     apt update; \
     apt install -y --no-install-recommends \
-    autoconf automake binutils ca-certificates cmake file gcc g++ git jq libc6-dev zlib1g-dev \
+    autoconf automake binutils ca-certificates cmake file gcc g++ git jq libc-dev libc-dev zlib1g-dev \
     libtool m4 make pkg-config curl libssl-dev;
 
 # install musl
