--- a/dockerfiles/Dockerfile.clang
+++ b/dockerfiles/Dockerfile.clang
@@ -1,29 +1,24 @@
-FROM ubuntu:focal
+FROM alpine:latest
 
-# install tools and dependencies
-RUN set -eux; \
-    apt update; \
-    apt install -y --no-install-recommends \
-    ca-certificates cmake file g++ git  \
-    clang libclang-dev patch make curl ninja-build python2 mc linux-headers-generic;
-WORKDIR /builds
+RUN apk add --no-cache \
+    clang-dev \
+    clang-static \
+    cmake \
+    g++ \
+    git \
+    libexecinfo-dev \
+    linux-headers \
+    make \
+    ninja \
+    patch \
+    python \
+    curl \
+    jq \
+    mc
+
+
 RUN SCCACHE_LATEST_URL=`curl -sL    https://api.github.com/repos/mozilla/sccache/releases/latest | jq -r '.assets[2].browser_download_url'`; \
   curl -L $SCCACHE_LATEST_URL | tar zxf - --overwrite --strip-components=1 -C /usr/bin ;\
   sccache --version
-ENV CC="sccache /usr/bin/clang"\
-    CXX="sccache /usr/bin/clang++"\
-    SCCACHE_REDIS=redis://172.17.0.1/0 \
+ENV SCCACHE_REDIS=redis://172.17.0.1/0 \
     SCCACHE_IDLE_TIMEOUT=0
-RUN mkdir ngtc
-COPY dockerfiles/sync.sh /builds/ngtc/
-COPY dockerfiles/configure.sh /builds/ngtc/
-COPY dockerfiles/build.sh /builds/ngtc/
-COPY dockerfiles/install.sh /builds/ngtc/
-RUN cd ngtc;\
-  ./sync.sh release/9.x
-RUN cd ngtc;\
-  ./configure.sh
-RUN cd ngtc;\
-  ./build.sh
-RUN cd ngtc;\
-  ./install.sh
