--- a/.github/workflows/build-clang-toolchain.yml
+++ b/.github/workflows/build-clang-toolchain.yml
@@ -11,13 +11,10 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
       - name: Build Clang MUSL toolchain
         run: |
           docker run generalbeck/docker-cross-rust:alpine-sccache /bin/sh -c \
-          'git clone https://github.com/General-Beck/docker-cross-rust.git && \
-          cd docker-cross-rust\ && git checkout ngtc && cd dockerfiles && \
+          'git clone https://github.com/General-Beck/docker-cross-rust.git clang&& \
+          cd clang && git checkout ngtc && cd dockerfiles && \
           sync.sh && configure.sh && build.sh && install.sh' \
           ls -a
-      
