--- a/.github/workflows/build-clang-toolchain.yml
+++ b/.github/workflows/build-clang-toolchain.yml
@@ -28,4 +28,4 @@ jobs:
         uses:          actions/upload-artifact@v1
         with:
           name:        x86_64-unknown-linux-musl
-          path:        artifacts/
+          path:        /artifact/
