--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v2
       - name: Build the Docker image
-        run: docker build . --file dockerfiles/Dockerfile.x86_64-unknown-linux-musl --tag generalbeck/docker-cross-rust:x86_64-unknown-linux-musl
+        run: docker build . --file dockerfiles/Dockerfile.x86_64-unknown-linux-musl --tag docker.pkg.github.com/General-Beck/docker-cross-rust/docker-cross-rust:x86_64-unknown-linux-musl
       - name: Push the Docker image
         run: |
-          docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
-          docker push generalbeck/docker-cross-rust:x86_64-unknown-linux-musl
+          docker login -u General-Beck -p ${{ secrets.GITHUB_TOKEN }}
+          docker push docker.pkg.github.com/General-Beck/docker-cross-rust/docker-cross-rust:x86_64
       - name: Docker logout
         run: docker logout
