--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Build the Docker image
         run: docker build . --file dockerfiles/Dockerfile.x86_64-unknown-linux-musl --tag docker.pkg.github.com/general-beck/docker-cross-rust/docker-cross-rust:x86_64-unknown-linux-musl
+      - name: Docker login
+        run: docker login docker.pkg.github.com -u General-Beck -p ${{ secrets.GITHUB_TOKEN }}
       - name: Push the Docker image
-        run: |
-          docker login docker.pkg.github.com -u General-Beck -p ${{ secrets.GITHUB_TOKEN }}
-          docker push docker.pkg.github.com/general-geck/docker-cross-rust/docker-cross-rust:x86_64
+        run: docker push docker.pkg.github.com/general-beck/docker-cross-rust/docker-cross-rust:x86_64-unknown-linux-musl
       - name: Docker logout
         run: docker logout
