--- a/.github/workflows/build-clang-toolchain.yml
+++ b/.github/workflows/build-clang-toolchain.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-  build:
+  build-clang-musl-toolchain:
 
     runs-on: self-hosted
     container: generalbeck/docker-cross-rust:alpine-sccache
