--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -7,18 +7,18 @@ on:
     branches: [ master ]
 jobs:
 
-  build:
+  build-x86_64-unknown-linux-musl:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
       - name: Build the Docker image
-        run: docker build . --file dockerfiles/Dockerfile.clang --tag generalbeck/docker-cross-rust:clang
+        run: docker build . --file dockerfiles/Dockerfile.x86_64-unknown-linux-musl --tag docker.pkg.github.com/general-beck/docker-cross-rust/docker-cross-rust:x86_64-unknown-linux-musl
+      - name: Docker login
+        run: docker login docker.pkg.github.com -u General-Beck -p ${{ secrets.GITHUB_TOKEN }}
       - name: Push the Docker image
-        run: |
-          docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
-          docker push generalbeck/docker-cross-rust:clang
+        run: docker push docker.pkg.github.com/general-beck/docker-cross-rust/docker-cross-rust:x86_64-unknown-linux-musl
       - name: Docker logout
         run: docker logout
