--- a/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
@@ -1,9 +1,9 @@
 FROM ubuntu:focal
 
 # metadata
-ARG TARGET=x86_64-unknown-linux-musl
-ARG OPENSSL_ARCH=linux-x86_64
-ARG MUSL_TARGET=x86_64-linux-musl
+ARG TARGET=aarch64-unknown-linux-musl
+ARG OPENSSL_ARCH=linux-aarch64
+ARG MUSL_TARGET=aarch64-linux-musl
 
 ENV RUST_MUSL_CROSS_TARGET=$TARGET
 ENV DEBIAN_FRONTEND=noninteractive
@@ -33,22 +33,22 @@ RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
 
 ENV CC=$TARGET-gcc \
     CXX=$TARGET-g++ \
-    CC_x86_64_unknown_linux_musl=$TARGET-gcc \
-    CXX_x86_64_unknown_linux_musl=$TARGET-g++\
-    CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER=$TARGET-gcc \
+    CC_aarch64_unknown_linux_musl=$TARGET-gcc \
+    CXX_aarch64_unknown_linux_musl=$TARGET-g++\
+    CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=$TARGET-gcc \
     TARGET_CC=$TARGET-gcc\
     TARGET_CXX=$TARGET-g++\
     TARGET_AR=$TARGET-ar\
     TARGET_C_INCLUDE_PATH=/usr/local/$TARGET/include/\
-    CXX_LIB_PATH_x86_64_unknown_linux_musl=/usr/local/$TARGET/lib/ \
-    C_LIB_PATH_x86_64_unknown_linux_musl=/usr/local/$TARGET/lib/\
+    CXX_LIB_PATH_aarch64_unknown_linux_musl=/usr/local/$TARGET/lib/ \
+    C_LIB_PATH_aarch64_unknown_linux_musl=/usr/local/$TARGET/lib/\
     CXXSTDLIB=stdc++ \
     TARGET_CXXSTDLIB=stdc++ \
-    CXXSTDLIB_x86_64_unknown_linux_musl=stdc++ \
-    LDFLAGS_x86_64_unknown_linux_musl=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
+    CXXSTDLIB_aarch64_unknown_linux_musl=stdc++ \
+    LDFLAGS_aarch64_unknown_linux_musl=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
     LDFLAGS=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
-    CFLAGS_x86_64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CXXFLAGS_x86_64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CFLAGS_aarch64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CXXFLAGS_aarch64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
     CFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
     CXXFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
     LD_LIBRARY_PATH=/usr/local/lib:/usr/local/$TARGET/lib:$LD_LIBRARY_PATH \
@@ -104,6 +104,7 @@ ENV OPENSSL_DIR=/usr/local/$TARGET/ \
 #Prepare sccache ENV
 RUN mkdir $HOME/sccache
 ENV RUST_BACKTRACE=full\
+    RUST_TEST_THREADS=1 \
     RUSTC_WRAPPER=sccache \
     SCCACHE_DIR=$HOME/sccache \
     SCCACHE_CACHE_SIZE=1G
