--- a/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
@@ -16,20 +16,10 @@ ENV RUSTUP_HOME=/usr/local/rustup \
 
 # install tools and dependencies
 RUN set -eux; \
-    #sed 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch-=amd64,i386] http:\/\/ports.ubuntu.com\/ubuntu-ports\//g' /etc/apt/sources.list > /etc/apt/sources.list.d/ports.list \
-    #sed -i 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch=amd64,i386] http:\/\/\1.archive.ubuntu.com\/ubuntu\//g' /etc/apt/sources.list \
     apt update; \
     apt install -y --no-install-recommends \
     autoconf automake binutils ca-certificates cmake file gcc g++ git jq \
     libc6-dev libtool m4 make pkg-config curl libssl-dev zlib1g-dev mc;
-
-# install musl
-
-RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
-    tar xzf $MUSL_TARGET-cross.tgz&& \
-    cd $MUSL_TARGET-cross&& \
-    cp -fR * ../../usr/local/&& \
-    cd ..&& rm -rf $MUSL_TARGET-cross*
 
 ENV CC=$TARGET-gcc \
     CXX=$TARGET-g++ \
@@ -56,7 +46,7 @@ ENV CC=$TARGET-gcc \
     PKG_CONFIG_ALL_STATIC=1 \
     OPENSSL_STATIC=1 \
     LIBZ_SYS_STATIC=1 \
-    PATH=/usr/local/$TARGET/bin:$PATH \
+    PATH=/usr/local/$TARGET/bin:$PATH 
 
 # ZLib & OpenSSL
 RUN export C_INCLUDE_PATH=$TARGET_C_INCLUDE_PATH && \
@@ -78,6 +68,11 @@ RUN export C_INCLUDE_PATH=$TARGET_C_INCLUDE_PATH && \
 
 # download rustup
 ADD "https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init" rustup-init
+
+# rustup directory
+ENV RUSTUP_HOME=/usr/local/rustup \
+    CARGO_HOME=/usr/local/cargo \
+    PATH=/usr/local/cargo/bin:$PATH
 
 RUN	chmod +x rustup-init; \
   ./rustup-init -y --no-modify-path --default-toolchain stable; \
