--- a/dockerfiles/Dockerfile.armv7-unknown-linux-musleabihf
+++ b/dockerfiles/Dockerfile.armv7-unknown-linux-musleabihf
@@ -9,15 +9,8 @@ ENV RUST_MUSL_CROSS_TARGET=$TARGET
 ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /builds
 
-# rustup directory
-ENV RUSTUP_HOME=/usr/local/rustup \
-    CARGO_HOME=/usr/local/cargo \
-    PATH=/usr/local/cargo/bin:$PATH
-
 # install tools and dependencies
 RUN set -eux; \
-    #sed 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch-=amd64,i386] http:\/\/ports.ubuntu.com\/ubuntu-ports\//g' /etc/apt/sources.list > /etc/apt/sources.list.d/ports.list \
-    #sed -i 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch=amd64,i386] http:\/\/\1.archive.ubuntu.com\/ubuntu\//g' /etc/apt/sources.list \
     apt update; \
     apt install -y --no-install-recommends \
     autoconf automake binutils ca-certificates cmake file gcc g++ git jq \
@@ -31,32 +24,32 @@ RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
     cp -fR * ../../usr/local/&& \
     cd ..&& rm -rf $MUSL_TARGET-cross*
 
-    ENV CC=$TARGET-gcc \
-        CXX=$TARGET-g++ \
-        CC_armv7_unknown_linux_musleabihf=$TARGET-gcc \
-        CXX_armv7_unknown_linux_musleabihf=$TARGET-g++\
-        CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER=$TARGET-gcc \
-        TARGET_CC=$TARGET-gcc\
-        TARGET_CXX=$TARGET-g++\
-        TARGET_AR=$TARGET-ar\
-        TARGET_C_INCLUDE_PATH=/usr/local/$TARGET/include/\
-        CXX_LIB_PATH_armv7_unknown_linux_musleabihf=/usr/local/$TARGET/lib/ \
-        C_LIB_PATH_armv7_unknown_linux_musleabihf=/usr/local/$TARGET/lib/\
-        CXXSTDLIB=stdc++ \
-        TARGET_CXXSTDLIB=stdc++ \
-        CXXSTDLIB_armv7_unknown_linux_musleabihf=stdc++ \
-        LDFLAGS_armv7_unknown_linux_musleabihf=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
-        LDFLAGS=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
-        CFLAGS_armv7_unknown_linux_musleabihf=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-        CXXFLAGS_armv7_unknown_linux_musleabihf=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-        CFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-        CXXFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-        LD_LIBRARY_PATH=/usr/local/lib:/usr/local/$TARGET/lib:$LD_LIBRARY_PATH \
-        PKG_CONFIG_ALLOW_CROSS=1 \
-        PKG_CONFIG_ALL_STATIC=1 \
-        OPENSSL_STATIC=1 \
-        LIBZ_SYS_STATIC=1 \
-        PATH=/usr/local/$TARGET/bin:$PATH \
+ENV CC=$TARGET-gcc \
+    CXX=$TARGET-g++ \
+    CC_armv7_unknown_linux_musleabihf=$TARGET-gcc \
+    CXX_armv7_unknown_linux_musleabihf=$TARGET-g++\
+    CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER=$TARGET-gcc \
+    TARGET_CC=$TARGET-gcc\
+    TARGET_CXX=$TARGET-g++\
+    TARGET_AR=$TARGET-ar\
+    TARGET_C_INCLUDE_PATH=/usr/local/$TARGET/include/\
+    CXX_LIB_PATH_armv7_unknown_linux_musleabihf=/usr/local/$TARGET/lib/ \
+    C_LIB_PATH_armv7_unknown_linux_musleabihf=/usr/local/$TARGET/lib/\
+    CXXSTDLIB=stdc++ \
+    TARGET_CXXSTDLIB=stdc++ \
+    CXXSTDLIB_armv7_unknown_linux_musleabihf=stdc++ \
+    LDFLAGS_armv7_unknown_linux_musleabihf=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
+    LDFLAGS=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
+    CFLAGS_armv7_unknown_linux_musleabihf=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CXXFLAGS_armv7_unknown_linux_musleabihf=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
+    CXXFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
+    LD_LIBRARY_PATH=/usr/local/lib:/usr/local/$TARGET/lib:$LD_LIBRARY_PATH \
+    PKG_CONFIG_ALLOW_CROSS=1 \
+    PKG_CONFIG_ALL_STATIC=1 \
+    OPENSSL_STATIC=1 \
+    LIBZ_SYS_STATIC=1 \
+    PATH=/usr/local/$TARGET/bin:$PATH 
 
 # ZLib & OpenSSL
 RUN export C_INCLUDE_PATH=$TARGET_C_INCLUDE_PATH && \
@@ -78,6 +71,11 @@ RUN export C_INCLUDE_PATH=$TARGET_C_INCLUDE_PATH && \
 
 # download rustup
 ADD "https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init" rustup-init
+
+# rustup directory
+ENV RUSTUP_HOME=/usr/local/rustup \
+    CARGO_HOME=/usr/local/cargo \
+    PATH=/usr/local/cargo/bin:$PATH
 
 RUN	chmod +x rustup-init; \
   ./rustup-init -y --no-modify-path --default-toolchain stable; \
