--- a/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
@@ -9,15 +9,8 @@ ENV RUST_MUSL_CROSS_TARGET=$TARGET
 ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /builds
 
-# rustup directory
-ENV RUSTUP_HOME=/usr/local/rustup \
-    CARGO_HOME=/usr/local/cargo \
-    PATH=/usr/local/cargo/bin:$PATH
-
 # install tools and dependencies
 RUN set -eux; \
-    #sed 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch-=amd64,i386] http:\/\/ports.ubuntu.com\/ubuntu-ports\//g' /etc/apt/sources.list > /etc/apt/sources.list.d/ports.list \
-    #sed -i 's/http:\/\/\(.*\).ubuntu.com\/ubuntu\//[arch=amd64,i386] http:\/\/\1.archive.ubuntu.com\/ubuntu\//g' /etc/apt/sources.list \
     apt update; \
     apt install -y --no-install-recommends \
     autoconf automake binutils ca-certificates cmake file gcc g++ git jq \
@@ -56,7 +49,7 @@ ENV CC=$TARGET-gcc \
     PKG_CONFIG_ALL_STATIC=1 \
     OPENSSL_STATIC=1 \
     LIBZ_SYS_STATIC=1 \
-    PATH=/usr/local/$TARGET/bin:$PATH \
+    PATH=/usr/local/$TARGET/bin:$PATH 
 
 # ZLib & OpenSSL
 RUN export C_INCLUDE_PATH=$TARGET_C_INCLUDE_PATH && \
@@ -78,6 +71,11 @@ RUN export C_INCLUDE_PATH=$TARGET_C_INCLUDE_PATH && \
 
 # download rustup
 ADD "https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init" rustup-init
+
+# rustup directory
+ENV RUSTUP_HOME=/usr/local/rustup \
+    CARGO_HOME=/usr/local/cargo \
+    PATH=/usr/local/cargo/bin:$PATH
 
 RUN	chmod +x rustup-init; \
   ./rustup-init -y --no-modify-path --default-toolchain stable; \
