--- a/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
@@ -30,8 +30,10 @@ curl -L https://github.com/richfelker/musl-cross-make/archive/master.tar.gz | \
     GCC_VER=9.3.0 \
     MUSL_VER=1.2.0 \
     DL_CMD="curl -C - -L -o" \
+    COMMON_CONFIG += CFLAGS="-g0 -Os" CXXFLAGS="-g0 -Os" LDFLAGS="-s" \
     OUTPUT=/usr/local/ \
-    "$@"
+    "$@"; \
+    cd ..&&ls -a && rm -rf *
 #RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
 #    tar xzf $MUSL_TARGET-cross.tgz&& \
 #    cd $MUSL_TARGET-cross&& \
