--- a/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
@@ -19,7 +19,7 @@ RUN set -eux; \
 
 # install musl
 
-curl -L https://github.com/richfelker/musl-cross-make/archive/master.tar.gz | \
+RUN curl -L https://github.com/richfelker/musl-cross-make/archive/master.tar.gz | \
     tar --strip-components=1 -xz; \
     make install -j$(nproc) \
     GCC_VER=9.3.0 \
