--- a/dockerfiles/config/armv7-unknown-linux-musleabihf.config
+++ b/dockerfiles/config/armv7-unknown-linux-musleabihf.config
@@ -1,4 +1,3 @@
 [target.armv7-unknown-linux-musleabihf]
-rustflags = ["-C","target-feature=+crt-static"]
-ar = "armv7-unknown-linux-musleabihf-ar"
-linker = "armv7-unknown-linux-musleabihf-ld"
+ar = "arm-linux-musleabihf-ar"
+linker = "arm-linux-musleabihf-ld"
