--- a/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
@@ -5,15 +5,11 @@ ARG TARGET=aarch64-unknown-linux-musl
 ARG OPENSSL_ARCH=linux-aarch64
 ARG MUSL_TARGET=aarch64-linux-musl
 
+
 ENV RUST_MUSL_CROSS_TARGET=$TARGET \
     TARGET_HOST=$TARGET
 ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /builds
-
-# rustup directory
-ENV RUSTUP_HOME=/usr/local/rustup \
-    CARGO_HOME=/usr/local/cargo \
-    PATH=/usr/local/cargo/bin:$PATH
 
 # install tools and dependencies
 RUN set -eux; \
@@ -24,48 +20,57 @@ RUN set -eux; \
 
 # install musl
 
-RUN curl -L https://github.com/richfelker/musl-cross-make/archive/master.tar.gz | \
+RUN curl -L https://git.zv.io/toolchains/musl-cross-make/-/archive/master/musl-cross-make-master.tar.gz | \
     tar --strip-components=1 -xz; \
     make install -j$(nproc) \
+    TARGET=$MUSL_TARGET
     GCC_VER=9.3.0 \
     MUSL_VER=1.2.0 \
+    BINUTILS_VER = 2.34 \
+    GMP_VER = 6.2.0 \
+    MPC_VER = 1.1.0 \
+    MPFR_VER = 4.0.2 \
+    LINUX_VER = 5.4.24 \
     DL_CMD="curl -C - -L -o" \
-    COMMON_CONFIG += CFLAGS="-g0 -Os" CXXFLAGS="-g0 -Os" LDFLAGS="-s" \
     OUTPUT=/usr/local/ \
+    STAT = -static --static \
+    FLAG = -g0 -O2 -fno-align-functions -fno-align-jumps -fno-align-loops -fno-align-labels \
+    COMMON_CONFIG += CC="$(HOST)-gcc ${STAT}" CXX="$(HOST)-g++ ${STAT}"  \
+    COMMON_CONFIG += CFLAGS="-g0 -Os" CXXFLAGS="-g0 -Os" LDFLAGS="-s" \
     "$@"; \
-    ls -a&& cd ..&&ls -a 
+    ls -a&& cd ..&&ls -a
 #RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
 #    tar xzf $MUSL_TARGET-cross.tgz&& \
 #    cd $MUSL_TARGET-cross&& \
 #    cp -fR * ../../usr/local/&& \
 #    cd ..&& rm -rf $MUSL_TARGET-cross*
 
-ENV CC=$TARGET-gcc \
-    CXX=$TARGET-g++ \
-    CC_aarch64_unknown_linux_musl=$TARGET-gcc \
-    CXX_aarch64_unknown_linux_musl=$TARGET-g++\
-    CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=$TARGET-gcc \
-    TARGET_CC=$TARGET-gcc\
-    TARGET_CXX=$TARGET-g++\
-    TARGET_AR=$TARGET-ar\
-    TARGET_C_INCLUDE_PATH=/usr/local/$TARGET/include/\
-    CXX_LIB_PATH_aarch64_unknown_linux_musl=/usr/local/$TARGET/lib/ \
-    C_LIB_PATH_aarch64_unknown_linux_musl=/usr/local/$TARGET/lib/\
+ENV CC=$MUSL_TARGET-gcc \
+    CXX=$MUSL_TARGET-g++ \
+    CC_aarch64_unknown_linux_musl=$MUSL_TARGET-gcc \
+    CXX_aarch64_unknown_linux_musl=$MUSL_TARGET-g++\
+    CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=$MUSL_TARGET-gcc \
+    TARGET_CC=$MUSL_TARGET-gcc\
+    TARGET_CXX=$MUSL_TARGET-g++\
+    TARGET_AR=$MUSL_TARGET-ar\
+    TARGET_C_INCLUDE_PATH=/usr/local/$MUSL_TARGET/include/\
+    CXX_LIB_PATH_aarch64_unknown_linux_musl=/usr/local/$MUSL_TARGET/lib/ \
+    C_LIB_PATH_aarch64_unknown_linux_musl=/usr/local/$MUSL_TARGET/lib/\
     CXXSTDLIB=stdc++ \
     TARGET_CXXSTDLIB=stdc++ \
     CXXSTDLIB_aarch64_unknown_linux_musl=stdc++ \
-    LDFLAGS_aarch64_unknown_linux_musl=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
-    LDFLAGS=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$TARGET/lib" \
-    CFLAGS_aarch64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CXXFLAGS_aarch64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    CXXFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$TARGET/include" \
-    LD_LIBRARY_PATH=/usr/local/lib:/usr/local/$TARGET/lib:$LD_LIBRARY_PATH \
+    LDFLAGS_aarch64_unknown_linux_musl=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$MUSL_TARGET/lib" \
+    LDFLAGS=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$MUSL_TARGET/lib" \
+    CFLAGS_aarch64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    CXXFLAGS_aarch64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    CFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    CXXFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    LD_LIBRARY_PATH=/usr/local/lib:/usr/local/$MUSL_TARGET/lib:$LD_LIBRARY_PATH \
     PKG_CONFIG_ALLOW_CROSS=1 \
     PKG_CONFIG_ALL_STATIC=1 \
     OPENSSL_STATIC=1 \
     LIBZ_SYS_STATIC=1 \
-    PATH=/usr/local/$TARGET/bin:$PATH
+    PATH=/usr/local/$MUSL_TARGET/bin:$PATH
 
 # ZLib & OpenSSL
 RUN echo "Building zlib" && \
@@ -73,17 +78,17 @@ RUN echo "Building zlib" && \
     curl -sLO https://zlib.net/zlib-$VERS.tar.gz && \
     tar xzf zlib-$VERS.tar.gz && cd zlib-$VERS && \
     $CC -v&&\
-    CHOST=$TARGET CC=$TARGET_CC ./configure --static --prefix=/usr/local/$TARGET && \
+    CHOST=$TARGET CC=$TARGET_CC ./configure --static --prefix=/usr/local/$MUSL_TARGET && \
     make && make install && \
     cd .. && rm -rf zlib-$VERS.tar.gz zlib-$VERS checksums.txt
 RUN echo "Building OpenSSL" && \
     VERS=1.1.1d && \
     curl -sLO https://www.openssl.org/source/openssl-$VERS.tar.gz && \
     tar xzf openssl-$VERS.tar.gz && cd openssl-$VERS && \
-    ./Configure $OPENSSL_ARCH no-async no-afalgeng no-shared --static --prefix=/usr/local/$TARGET && \
+    ./Configure $OPENSSL_ARCH no-async no-afalgeng no-shared --static --prefix=/usr/local/$MUSL_TARGET && \
     make depend && \
     make && make install && \
-    cd .. && rm -rf openssl-$VERS.tar.gz openssl-$VERS checksums.txt /usr/local/$TARGET/share
+    cd .. && rm -rf openssl-$VERS.tar.gz openssl-$VERS checksums.txt /usr/local/$MUSL_TARGET/share
 
 
 # download rustup
@@ -111,10 +116,10 @@ RUN	chmod +x rustup-init; \
   rm -rf /var/lib/apt/lists/*;
 
 COPY config/$TARGET.config /root/.cargo/config
-ENV OPENSSL_DIR=/usr/local/$TARGET/ \
-    OPENSSL_INCLUDE_DIR=/usr/local/$TARGET/include/ \
-    DEP_OPENSSL_INCLUDE=/usr/local/$TARGET/include/ \
-    OPENSSL_LIB_DIR=/usr/local/$TARGET/lib/
+ENV OPENSSL_DIR=/usr/local/$MUSL_TARGET/ \
+    OPENSSL_INCLUDE_DIR=/usr/local/$MUSL_TARGET/include/ \
+    DEP_OPENSSL_INCLUDE=/usr/local/$MUSL_TARGET/include/ \
+    OPENSSL_LIB_DIR=/usr/local/$MUSL_TARGET/lib/
 
 #Prepare sccache ENV
 RUN mkdir $HOME/sccache
