--- a/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
@@ -23,7 +23,7 @@ RUN set -eux; \
 RUN curl -L https://git.zv.io/toolchains/musl-cross-make/-/archive/master/musl-cross-make-master.tar.gz | \
     tar --strip-components=1 -xz; \
     make install -j$(nproc) \
-    TARGET=$MUSL_TARGET
+    TARGET=$MUSL_TARGET \
     GCC_VER=9.3.0 \
     MUSL_VER=1.2.0 \
     BINUTILS_VER = 2.34 \
